logs/glim-extensions.log
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/glim'...
Listing './lib/python3.5/site-packages/glim/prototype'...
Listing './lib/python3.5/site-packages/glim/prototype/app'...
Listing './lib/python3.5/site-packages/glim/prototype/app/assets'...
Listing './lib/python3.5/site-packages/glim/prototype/app/config'...
Listing './lib/python3.5/site-packages/glim/prototype/app/storage'...
Listing './lib/python3.5/site-packages/glim/test'...
Listing './lib/python3.5/site-packages/glim-0.11.2.egg-info'...
Listing './lib/python3.5/site-packages/glim_extensions'...
Listing './lib/python3.5/site-packages/glim_extensions/db'...
Compiling './lib/python3.5/site-packages/glim_extensions/db/migration.py'...
***   File "./lib/python3.5/site-packages/glim_extensions/db/migration.py", line 53
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/glim_extensions/gredis'...
Compiling './lib/python3.5/site-packages/glim_extensions/gredis/gredis.py'...
***   File "./lib/python3.5/site-packages/glim_extensions/gredis/gredis.py", line 44
    except redis.RedisError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/glim_extensions/job'...
Compiling './lib/python3.5/site-packages/glim_extensions/job/job.py'...
***   File "./lib/python3.5/site-packages/glim_extensions/job/job.py", line 38
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/glim_extensions/jslint'...
Compiling './lib/python3.5/site-packages/glim_extensions/jslint/start.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (start.py, line 10)
Listing './lib/python3.5/site-packages/glim_extensions/less'...
Compiling './lib/python3.5/site-packages/glim_extensions/less/start.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (start.py, line 10)
Listing './lib/python3.5/site-packages/glim_extensions/memcached'...
Listing './lib/python3.5/site-packages/glim_extensions/view'...
Listing './lib/python3.5/site-packages/glim_extensions-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymemcache'...
Listing './lib/python3.5/site-packages/pymemcache/client'...
Listing './lib/python3.5/site-packages/pymemcache/test'...
Listing './lib/python3.5/site-packages/pymemcache-1.4.4.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
